--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,5 @@
     <string name="dark_mode">Dark mode</string>
     <string name="dark_mode_is_enabled">Dark Mode is enabled</string>
     <string name="light_mode_is_enabled">Light Mode</string>
-
+    <string name="oops_text" translatable="false">"Oops...You did not allow CallerID to access your phone call logs(((\nPlease do it!"</string>
 </resources>
