--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -25,6 +25,7 @@
     <string name="save">Сохранить</string>
     <string name="update_database_from_cloud">Обновить базу данных</string>
     <string name="dark_mode">Темная тема</string>
+    <string name="blocking_mode">Режим блокировки</string>
     <string name="dark_mode_is_enabled">Темная тема включена</string>
     <string name="light_mode_is_enabled">Светлая тема включена</string>
 </resources>
